[package]
name = "smallgraph"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
description = "A small graph based on smallvec"
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/richardanaya/smallgraph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1"